@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2010-11-22" />
+<meta name="date" content="2010-11-23" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-11-22</td></tr>
+<td>2010-11-23</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.20</td></tr>
 </tbody>
@@ -2263,13 +2263,13 @@ The choice System default uses whatever icon size is set by GTK.</dd>
 <dl class="docutils">
 <dt>Line wrapping</dt>
 <dd>Show long lines wrapped around to new display lines.</dd>
-<dt>Enable &quot;smart&quot; home key</dt>
+<dt>&quot;Smart&quot; home key</dt>
 <dd>Whether to move the cursor to the first non-whitespace character
 on the line when you hit the home key on your keyboard. Pressing it
 again will go to the very start of the line.</dd>
 <dt>Disable Drag and Drop</dt>
 <dd>Do not allow the dragging and dropping of selected text in documents.</dd>
-<dt>Enable folding</dt>
+<dt>Code folding</dt>
 <dd>Allow groups of lines in a document to be collapsed for easier
 navigation/editing.</dd>
 <dt>Fold/Unfold all children of a fold point</dt>
@@ -2352,8 +2352,9 @@ meanings in different contexts - e.g. for snippet completion.</p>
 <dd>Whether to replace special keywords after typing Tab into a
 pre-defined text snippet.
 See <a class="reference" href="#user-definable-snippets">User-definable snippets</a>.</dd>
-<dt>XML/HTML tag autocompletion</dt>
-<dd>When you open an XML tag automatically generate its completion tag.</dd>
+<dt>XML/HTML tag auto-closing</dt>
+<dd>When you open an XML/HTML tag automatically generate its
+completion tag.</dd>
 <dt>Automatic continuation multi-line comments</dt>
 <dd><p class="first">Continue automatically multi-line comments in languages like C, C++
 and Java when a new line is entered inside such a comment.
@@ -6366,7 +6367,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-11-23 13:12 UTC.
+Generated on: 2010-11-23 13:39 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
